--- a/給新手的C++教學 (上冊)/給新手的C++教學 (上冊) - 13. 額外語法 (Extra syntax)/給新手的C++教學 (上冊) - 13 - 16. 函式的遞迴/給新手的C++教學 (上冊) - 13 - 16. 函式的遞迴.html
+++ b/給新手的C++教學 (上冊)/給新手的C++教學 (上冊) - 13. 額外語法 (Extra syntax)/給新手的C++教學 (上冊) - 13 - 16. 函式的遞迴/給新手的C++教學 (上冊) - 13 - 16. 函式的遞迴.html
@@ -1,4 +1,4 @@
-﻿<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js" type="text/javascript">
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js" type="text/javascript">
 MathJax.Hub.Config({
  extensions: ["tex2jax.js","TeX/AMSmath.js","TeX/AMSsymbols.js"],
  jax: ["input/TeX", "output/HTML-CSS"],
@@ -536,8 +536,8 @@ Animation
                         variables[v].setValue(state[1][v][1]);
                     }
                     setInnerHTML(textBlock, state[2]);
-                    for (let i = 0; i < code.length; i++) {
-                        codeLines[i].style.opacity = (state[3][i] ? 1 : 0);
+                    for (let j = 0; j < code.length; j++) {
+                        codeLines[j].style.opacity = (state[3][j] ? 1 : 0);
                     }
                 }
             };
@@ -893,8 +893,8 @@ Animation
                     variables[v].setValue(state[1][v][1]);
                 }
                 setInnerHTML(textBlock, state[2]);
-                for (let i = 0; i < code.length; i++) {
-                    codeLines[i].style.opacity = (state[3][i] ? 1 : 0);
+                for (let j = 0; j < code.length; j++) {
+                    codeLines[j].style.opacity = (state[3][j] ? 1 : 0);
                 }
             };
             setIndex(0);
